Hallucination Patrol for Java Standard Library notebook.

--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -24,10 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5838124",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "EvalException",
+     "evalue": "Cannot invoke \"java.io.Console.readLine(String, Object[])\" because \"<local1>\" is null",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1m\u001b[31mjava.lang.NullPointerException: Cannot invoke \"java.io.Console.readLine(String, Object[])\" because \"<local1>\" is null\u001b[0m",
+      "\u001b[1m\u001b[31m\tat ConsoleIODemo.main(#13:1)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat .(#14:1)\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "import java.io.Console;\n",
     "\n",
@@ -66,7 +78,9 @@
     "        boolean flag = Boolean.parseBoolean(console.readLine(\"Enter a boolean value (true/false): \"));\n",
     "        System.out.println(\"You entered: \" + flag); // You entered: [user input]\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "ConsoleIODemo.main(null);"
    ]
   },
   {
@@ -90,10 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c4e82662",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Absolute value: 10\n",
+      "Maximum: 10\n",
+      "Minimum: 5\n",
+      "Rounded value: 4.0\n",
+      "Random number: 70\n",
+      "Power: 8.0\n",
+      "Square root: 5.0\n",
+      "Logarithm: 2.302585092994046\n",
+      "Sine: 1.0\n",
+      "Cosine: -1.0\n",
+      "Tangent: 0.9999999999999999\n"
+     ]
+    }
+   ],
    "source": [
     "import java.util.Random;\n",
     "\n",
@@ -134,7 +166,9 @@
     "        System.out.println(\"Cosine: \" + cosine); // Expected output: -1.0\n",
     "        System.out.println(\"Tangent: \" + tangent); // Expected output: 1.0\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "MathDemo.main(null);"
    ]
   },
   {
@@ -165,10 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ed662f37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File created successfully.\n",
+      "Data written to the file.\n",
+      "Data read from the file: Hello, World!\n",
+      "File deleted successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "import java.io.File;\n",
     "import java.io.FileReader;\n",
@@ -217,96 +262,9 @@
     "            System.out.println(\"An error occurred: \" + e.getMessage());\n",
     "        }\n",
     "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e9a194f",
-   "metadata": {},
-   "source": [
-    "# Threading/async/await/lock/promise\n",
-    "Explanation:\n",
-    "This code snippet demonstrates the usage of threading concepts like async/await, lock, and promise in Java.\n",
+    "}\n",
     "\n",
-    "1. The code creates a `ReentrantLock` object to synchronize access to a shared resource.\n",
-    "2. It creates a `CompletableFuture` named `future` that represents an asynchronous task. The task acquires the lock, simulates a long-running task, and returns a result.\n",
-    "3. The code uses the `await` keyword to asynchronously wait for the completion of the `future` task. It prints the result once the task is completed.\n",
-    "4. Another `CompletableFuture` named `promise` is created to handle the result of the `future` task using the `get()` method. It then prints the result.\n",
-    "5. The code waits for the `asyncTask` to complete using the `join()` method.\n",
-    "\n",
-    "When executed, the code will print:\n",
-    "```\n",
-    "Async task completed\n",
-    "Promise result: Async task completed\n",
-    "```\n",
-    "\n",
-    "Note: The code intentionally ignores exception handling for brevity. In a real-world scenario, proper exception handling should be implemented."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45524655",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import java.util.concurrent.CompletableFuture;\n",
-    "import java.util.concurrent.ExecutionException;\n",
-    "import java.util.concurrent.locks.Lock;\n",
-    "import java.util.concurrent.locks.ReentrantLock;\n",
-    "\n",
-    "public class ThreadingDemo {\n",
-    "\n",
-    "    public static void main(String[] args) {\n",
-    "        // Creating a lock\n",
-    "        Lock lock = new ReentrantLock();\n",
-    "\n",
-    "        // Creating a CompletableFuture\n",
-    "        CompletableFuture<String> future = CompletableFuture.supplyAsync(() -> {\n",
-    "            // Acquiring the lock\n",
-    "            lock.lock();\n",
-    "            try {\n",
-    "                // Simulating a long-running task\n",
-    "                Thread.sleep(2000);\n",
-    "                return \"Async task completed\";\n",
-    "            } catch (InterruptedException e) {\n",
-    "                return \"Async task interrupted\";\n",
-    "            } finally {\n",
-    "                // Releasing the lock\n",
-    "                lock.unlock();\n",
-    "            }\n",
-    "        });\n",
-    "\n",
-    "        // Using async/await to wait for the CompletableFuture to complete\n",
-    "        CompletableFuture<Void> asyncTask = CompletableFuture.runAsync(async () -> {\n",
-    "            try {\n",
-    "                // Waiting for the future to complete\n",
-    "                String result = await future;\n",
-    "                System.out.println(result); // Expected: Async task completed\n",
-    "            } catch (InterruptedException | ExecutionException e) {\n",
-    "                System.out.println(\"Async task interrupted\");\n",
-    "            }\n",
-    "        });\n",
-    "\n",
-    "        // Using promises to handle the result of the CompletableFuture\n",
-    "        CompletableFuture<String> promise = CompletableFuture.supplyAsync(() -> {\n",
-    "            try {\n",
-    "                // Waiting for the future to complete\n",
-    "                String result = future.get();\n",
-    "                return \"Promise result: \" + result;\n",
-    "            } catch (InterruptedException | ExecutionException e) {\n",
-    "                return \"Promise interrupted\";\n",
-    "            }\n",
-    "        });\n",
-    "\n",
-    "        // Printing the promise result\n",
-    "        promise.thenAccept(System.out::println); // Expected: Promise result: Async task completed\n",
-    "\n",
-    "        // Waiting for the asyncTask to complete\n",
-    "        asyncTask.join();\n",
-    "    }\n",
-    "}"
+    "FileIODemo.main(null);"
    ]
   },
   {
@@ -333,10 +291,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d4433f4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "java.net.UnknownHostException: api.example.com\n",
+      "\tat java.base/sun.nio.ch.NioSocketImpl.connect(NioSocketImpl.java:560)\n",
+      "\tat java.base/java.net.SocksSocketImpl.connect(SocksSocketImpl.java:327)\n",
+      "\tat java.base/java.net.Socket.connect(Socket.java:666)\n",
+      "\tat java.base/sun.security.ssl.SSLSocketImpl.connect(SSLSocketImpl.java:304)\n",
+      "\tat java.base/sun.security.ssl.BaseSSLSocketImpl.connect(BaseSSLSocketImpl.java:181)\n",
+      "\tat java.base/sun.net.NetworkClient.doConnect(NetworkClient.java:183)\n",
+      "\tat java.base/sun.net.www.http.HttpClient.openServer(HttpClient.java:532)\n",
+      "\tat java.base/sun.net.www.http.HttpClient.openServer(HttpClient.java:637)\n",
+      "\tat java.base/sun.net.www.protocol.https.HttpsClient.<init>(HttpsClient.java:264)\n",
+      "\tat java.base/sun.net.www.protocol.https.HttpsClient.New(HttpsClient.java:378)\n",
+      "\tat java.base/sun.net.www.protocol.https.AbstractDelegateHttpsURLConnection.getNewHttpClient(AbstractDelegateHttpsURLConnection.java:193)\n",
+      "\tat java.base/sun.net.www.protocol.http.HttpURLConnection.plainConnect0(HttpURLConnection.java:1241)\n",
+      "\tat java.base/sun.net.www.protocol.http.HttpURLConnection.plainConnect(HttpURLConnection.java:1127)\n",
+      "\tat java.base/sun.net.www.protocol.https.AbstractDelegateHttpsURLConnection.connect(AbstractDelegateHttpsURLConnection.java:179)\n",
+      "\tat java.base/sun.net.www.protocol.http.HttpURLConnection.getInputStream0(HttpURLConnection.java:1657)\n",
+      "\tat java.base/sun.net.www.protocol.http.HttpURLConnection.getInputStream(HttpURLConnection.java:1581)\n",
+      "\tat java.base/java.net.HttpURLConnection.getResponseCode(HttpURLConnection.java:529)\n",
+      "\tat java.base/sun.net.www.protocol.https.HttpsURLConnectionImpl.getResponseCode(HttpsURLConnectionImpl.java:308)\n",
+      "\tat REPL.$JShell$33$HttpExample.main($JShell$33.java:39)\n",
+      "\tat REPL.$JShell$34.do_it$($JShell$34.java:26)\n",
+      "\tat java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)\n",
+      "\tat java.base/java.lang.reflect.Method.invoke(Method.java:578)\n",
+      "\tat io.github.spencerpark.ijava.execution.IJavaExecutionControl.lambda$execute$1(IJavaExecutionControl.java:95)\n",
+      "\tat java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)\n",
+      "\tat java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)\n",
+      "\tat java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:1623)\n"
+     ]
+    }
+   ],
    "source": [
     "import java.io.BufferedReader;\n",
     "import java.io.IOException;\n",
@@ -378,7 +371,9 @@
     "            e.printStackTrace();\n",
     "        }\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "HttpExample.main(null);"
    ]
   },
   {
@@ -404,10 +399,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6fca0970",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path: C:/Users/John/Documents/file.txt\n",
+      "File name: file.txt\n",
+      "Parent directory: C:/Users/John/Documents\n",
+      "Root directory: null\n",
+      "Is absolute path: false\n",
+      "Is relative path: true\n",
+      "Resolved path: C:/Users/John/Documents/file.txt/subdirectory/file2.txt\n",
+      "Normalized path: C:/Users/John/file.txt\n",
+      "Relative path: ../../Pictures/image.jpg\n",
+      "JAVA_HOME: /Users/davidpetrofsky/OpenJDK/jdk-20.0.1.jdk/Contents/Home\n",
+      "MY_VARIABLE: my_value\n"
+     ]
+    }
+   ],
    "source": [
     "import java.nio.file.Path;\n",
     "import java.nio.file.Paths;\n",
@@ -427,7 +440,7 @@
     "\n",
     "        // Checking if the path is absolute or relative\n",
     "        System.out.println(\"Is absolute path: \" + path.isAbsolute()); // Is absolute path: true\n",
-    "        System.out.println(\"Is relative path: \" + path.isRelative()); // Is relative path: false\n",
+    "        System.out.println(\"Is relative path: \" + !path.isAbsolute()); // Is relative path: false\n",
     "\n",
     "        // Resolving a path against another path\n",
     "        Path resolvedPath = path.resolve(\"subdirectory/file2.txt\");\n",
@@ -452,15 +465,33 @@
     "        String myVariable = System.getProperty(\"MY_VARIABLE\");\n",
     "        System.out.println(\"MY_VARIABLE: \" + myVariable); // MY_VARIABLE: my_value\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "PathsAndEnvironmentVariablesDemo.main(null);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "572fd512",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Java",
    "language": "java",
-   "name": "ijava"
+   "name": "java"
+  },
+  "language_info": {
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "20.0.1+9-29"
   }
  },
  "nbformat": 4,
