Expanding and fixing Java Classes notebook.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1488,7 +1488,7 @@
    "id": "b70db609",
    "metadata": {},
    "source": [
-    "# Iterable/Iterator\n",
+    "# Iterable/Iterator/Collection\n",
     "In Java, to support the enhanced for loop (often called the \"for-each\" loop or \"range-based\" loop), the class should implement the Iterable<T> interface. The Iterable interface mandates that the implementing class provide an iterator() method, which returns an Iterator<T>. The Iterator<T> interface, in turn, requires two methods: hasNext() and next().\n",
     "\n",
     "Here's a basic overview:\n",
@@ -1499,7 +1499,8 @@
     "- `Iterator<T>` interface:\n",
     "\n",
     "    - Method: `boolean hasNext()`\n",
-    "    - Method: `T next()`"
+    "    - Method: `T next()`\n",
+    "- `Collection<T>` is an interface that provides basic collection stuff like size, iterator, etc."
    ]
   },
   {
