Manually improving some more Java notebooks.

--- a/java/Decorators.ipynb
+++ b/java/Decorators.ipynb
@@ -5,7 +5,7 @@
    "id": "8c064cad",
    "metadata": {},
    "source": [
-    "# Function Decorators\n",
+    "# Function Annotations\n",
     "Explanation:\n",
     "In this code snippet, we demonstrate function decorators in Java using custom annotations and reflection. \n",
     "\n",
@@ -28,10 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c7a66356",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before executing exampleMethod\n",
+      "Executing exampleMethod\n",
+      "After executing exampleMethod\n"
+     ]
+    }
+   ],
    "source": [
     "import java.lang.annotation.*;\n",
     "import java.lang.reflect.Method;\n",
@@ -81,7 +91,9 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "Main.main(null);"
    ]
   },
   {
@@ -89,7 +101,7 @@
    "id": "261cae06",
    "metadata": {},
    "source": [
-    "# Class Decorators\n",
+    "# Class Annotations\n",
     "Explanation:\n",
     "In Java, class decorators are implemented using annotations. Annotations provide a way to associate metadata with classes, methods, fields, etc. In this example, we define a custom annotation `@MyAnnotation` with a single value `value()`. The `@Retention` annotation specifies that the annotation should be retained at runtime, and the `@Target` annotation specifies that the annotation can be applied to classes.\n",
     "\n",
@@ -108,10 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7329deed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Annotation value: ClassDecorator\n",
+      "Name: John\n"
+     ]
+    }
+   ],
    "source": [
     "import java.lang.annotation.*;\n",
     "\n",
@@ -147,7 +168,9 @@
     "        MyClass obj = new MyClass(\"John\");\n",
     "        obj.printName(); // Expected output: Name: John\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "Main.main(null);"
    ]
   },
   {
@@ -155,82 +178,79 @@
    "id": "816fe5a0",
    "metadata": {},
    "source": [
-    "# Useful Built-In Decorators\n",
-    "Explanation:\n",
-    "In this code snippet, we demonstrate the use of decorators (annotations) in Java. We define a custom annotation `@MyAnnotation` and apply it to two methods in the `MyClass` class. The annotation takes a single parameter `value` which represents a description of the method.\n",
+    "# Useful Built-In Annotations\n",
     "\n",
-    "At runtime, we access and process the annotations using reflection. We retrieve the class object for `MyClass` and then obtain the method objects for `method1` and `method2`. We check if the methods have the `@MyAnnotation` annotation and if so, retrieve the annotation object and print its value.\n",
+    "## Built-in Annotations in `java.lang`\n",
     "\n",
-    "When you run the code, it will output:\n",
-    "```\n",
-    "Annotation value for method1: Method 1\n",
-    "Annotation value for method2: Method 2\n",
-    "```\n",
-    "This demonstrates how to use built-in decorators (annotations) in Java to add metadata to methods and access that metadata at runtime using reflection."
+    "Java provides several annotations in the `java.lang` package. Here's a brief overview of some of the most commonly used annotations from this package:\n",
+    "\n",
+    "### 1. `@Override`\n",
+    "\n",
+    "- **Description**: \n",
+    "  Indicates that a method declaration is intended to override a method declaration in a superclass.\n",
+    "  \n",
+    "- **Effect**: \n",
+    "  If the method doesn't properly override a method in one of its superclasses, the compiler generates an error.\n",
+    "\n",
+    "### 2. `@Deprecated`\n",
+    "\n",
+    "- **Description**: \n",
+    "  Marks a program element as no longer being recommended, suggesting there might be a better alternative.\n",
+    "  \n",
+    "- **Effect**: \n",
+    "  When a program uses a method, field, or class annotated with `@Deprecated`, the compiler generates a warning.\n",
+    "\n",
+    "### 3. `@SuppressWarnings`\n",
+    "\n",
+    "- **Description**: \n",
+    "  Tells the compiler to suppress specific warnings.\n",
+    "  \n",
+    "- **Effect**: \n",
+    "  It requires a parameter, which is the name of the warning to suppress. For example, `@SuppressWarnings(\"unchecked\")` suppresses unchecked warnings.\n",
+    "\n",
+    "### 4. `@SafeVarargs`\n",
+    "\n",
+    "- **Description**: \n",
+    "  Applied to a method or constructor that takes varargs parameters. \n",
+    "  \n",
+    "- **Effect**: \n",
+    "  Asserts that the code does not perform potentially unsafe operations on its varargs parameter. It's used when the compiler generates an unchecked warning, but the developer knows the method's implementation is safe and won't cause heap pollution.\n",
+    "\n",
+    "### 5. `@FunctionalInterface`\n",
+    "\n",
+    "- **Description**: \n",
+    "  Indicates an interface is intended to be a functional interface (an interface with a single abstract method).\n",
+    "  \n",
+    "- **Effect**: \n",
+    "  While optional, it's a best practice to use this annotation for functional interfaces. It ensures that the interface remains functional in case someone mistakenly adds another abstract method.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "These annotations mainly instruct the compiler or aid in documentation. While they don't alter program execution, they can produce warnings during compilation or help in generating appropriate documentation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a8be71",
+   "id": "5eba816f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import java.lang.annotation.*;\n",
-    "import java.lang.reflect.Method;\n",
-    "\n",
-    "// Define a custom annotation\n",
-    "@Retention(RetentionPolicy.RUNTIME)\n",
-    "@Target(ElementType.METHOD)\n",
-    "@interface MyAnnotation {\n",
-    "    String value();\n",
-    "}\n",
-    "\n",
-    "// Create a class with methods decorated with the custom annotation\n",
-    "class MyClass {\n",
-    "    @MyAnnotation(\"Method 1\")\n",
-    "    public void method1() {\n",
-    "        System.out.println(\"Executing method 1\");\n",
-    "    }\n",
-    "\n",
-    "    @MyAnnotation(\"Method 2\")\n",
-    "    public void method2() {\n",
-    "        System.out.println(\"Executing method 2\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Access and process the annotations at runtime\n",
-    "public class Main {\n",
-    "    public static void main(String[] args) throws NoSuchMethodException {\n",
-    "        // Get the class object\n",
-    "        Class<MyClass> myClass = MyClass.class;\n",
-    "\n",
-    "        // Get the method objects\n",
-    "        Method method1 = myClass.getMethod(\"method1\");\n",
-    "        Method method2 = myClass.getMethod(\"method2\");\n",
-    "\n",
-    "        // Check if the methods have the custom annotation\n",
-    "        if (method1.isAnnotationPresent(MyAnnotation.class)) {\n",
-    "            // Get the annotation object\n",
-    "            MyAnnotation annotation1 = method1.getAnnotation(MyAnnotation.class);\n",
-    "            System.out.println(\"Annotation value for method1: \" + annotation1.value());\n",
-    "        }\n",
-    "\n",
-    "        if (method2.isAnnotationPresent(MyAnnotation.class)) {\n",
-    "            // Get the annotation object\n",
-    "            MyAnnotation annotation2 = method2.getAnnotation(MyAnnotation.class);\n",
-    "            System.out.println(\"Annotation value for method2: \" + annotation2.value());\n",
-    "        }\n",
-    "    }\n",
-    "}"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Java",
    "language": "java",
-   "name": "ijava"
+   "name": "java"
+  },
+  "language_info": {
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "20.0.1+9-29"
   }
  },
  "nbformat": 4,
