--- a/java/Docstrings.ipynb
+++ b/java/Docstrings.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9360d5c4",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "30712dd0",
    "metadata": {},
    "outputs": [],
@@ -200,66 +200,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c78397",
-   "metadata": {},
-   "source": [
-    "# Variables\n",
-    "Explanation:\n",
-    "In Java, variables are used to store data of different types. In this code snippet, we demonstrate the declaration, initialization, and usage of variables.\n",
-    "\n",
-    "We declare and initialize variables of different types: `age` (int), `salary` (double), `gender` (char), `isEmployed` (boolean), and `name` (String). We then print the initial values of these variables using `System.out.println()`.\n",
-    "\n",
-    "Next, we update the values of the variables and print the updated values. This demonstrates how variables can be modified and their values can be changed during the execution of a program.\n",
-    "\n",
-    "The output of the program will display the values of the variables, both initial and updated, as expected."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45a555ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "/**\n",
-    " * This class demonstrates the usage of variables in Java.\n",
-    " */\n",
-    "public class VariablesDemo {\n",
-    "\n",
-    "    public static void main(String[] args) {\n",
-    "        // Declaration and initialization of variables\n",
-    "        int age = 25; // integer variable\n",
-    "        double salary = 50000.50; // double variable\n",
-    "        char gender = 'M'; // character variable\n",
-    "        boolean isEmployed = true; // boolean variable\n",
-    "        String name = \"John Doe\"; // string variable\n",
-    "\n",
-    "        // Printing the values of variables\n",
-    "        System.out.println(\"Age: \" + age); // Expected output: Age: 25\n",
-    "        System.out.println(\"Salary: \" + salary); // Expected output: Salary: 50000.5\n",
-    "        System.out.println(\"Gender: \" + gender); // Expected output: Gender: M\n",
-    "        System.out.println(\"Employed: \" + isEmployed); // Expected output: Employed: true\n",
-    "        System.out.println(\"Name: \" + name); // Expected output: Name: John Doe\n",
-    "\n",
-    "        // Updating the value of a variable\n",
-    "        age = 30;\n",
-    "        salary = 60000.75;\n",
-    "        gender = 'F';\n",
-    "        isEmployed = false;\n",
-    "        name = \"Jane Smith\";\n",
-    "\n",
-    "        // Printing the updated values of variables\n",
-    "        System.out.println(\"Updated Age: \" + age); // Expected output: Updated Age: 30\n",
-    "        System.out.println(\"Updated Salary: \" + salary); // Expected output: Updated Salary: 60000.75\n",
-    "        System.out.println(\"Updated Gender: \" + gender); // Expected output: Updated Gender: F\n",
-    "        System.out.println(\"Updated Employed: \" + isEmployed); // Expected output: Updated Employed: false\n",
-    "        System.out.println(\"Updated Name: \" + name); // Expected output: Updated Name: Jane Smith\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "45e91a73",
    "metadata": {},
    "source": [
@@ -275,15 +215,28 @@
     "- The inner class is documented with a docstring providing an overview of its purpose and functionality.\n",
     "- The enum is documented with a docstring describing its purpose and possible values.\n",
     "\n",
-    "The `main` method demonstrates the usage of the class and its elements. It creates an instance of `MyClass`, calls the `sayHello` method with a name parameter, and prints the result. It also accesses the `MAX_VALUE` constant and prints its value."
+    "The `main` method demonstrates the usage of the class and its elements. It creates an instance of `MyClass`, calls the `sayHello` method with a name parameter, and prints the result. It also accesses the `MAX_VALUE` constant and prints its value.\n",
+    "\n",
+    "Note: this example won't compile due to it declaring a package, but it still demonstrates what it demonstrates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d514bcc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30mpackage com.example.myapp;\u001b[0m",
+      "\u001b[1m\u001b[31millegal start of expression\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "/**\n",
     " * This is a docstring for the package.\n",
@@ -343,13 +296,29 @@
     "    }\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc4a1587",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Java",
    "language": "java",
-   "name": "ijava"
+   "name": "java"
+  },
+  "language_info": {
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "20.0.1+9-29"
   }
  },
  "nbformat": 4,
