--- a/java/Testing (JUnit-style).ipynb
+++ b/java/Testing (JUnit-style).ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0bc13312",
+   "metadata": {},
+   "source": [
+    "# Accuracy of This File\n",
+    "\n",
+    "Because the example don't compile, I left the AI-generated code cells intact.  That means the information in this file should be seen as a suggestion only and not memorized as absolute fact."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c0bb550c",
    "metadata": {},
    "source": [
@@ -30,15 +40,28 @@
     "Tearing down the test suite...\n",
     "```\n",
     "\n",
-    "The output shows that the test suite is set up, the tests in `TestClass1` and `TestClass2` are executed, and the test suite is torn down. The `.` represents a successful test execution, and the summary at the end shows the number of tests executed."
+    "The output shows that the test suite is set up, the tests in `TestClass1` and `TestClass2` are executed, and the test suite is torn down. The `.` represents a successful test execution, and the summary at the end shows the number of tests executed.\n",
+    "\n",
+    "Note: the examples in this file don't compile because jupyter doesn't have JUnit."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a99bcca8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mimport \u001b[0m\u001b[1m\u001b[30m\u001b[41morg.junit.runner.RunWith\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
+      "\u001b[1m\u001b[31mpackage org.junit.runner does not exist\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "import org.junit.runner.RunWith;\n",
     "import org.junit.runners.Suite;\n",
@@ -530,99 +553,21 @@
     "    }\n",
     "}"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23171cc2",
-   "metadata": {},
-   "source": [
-    "# Screendiffs\n",
-    "Explanation:\n",
-    "This code snippet demonstrates the usage of JUnit-style testing for screen diffs in Java. It uses the JUnit Jupiter framework for writing and executing tests.\n",
-    "\n",
-    "The `ScreenDiffTest` class contains a test method `testScreenDiff` annotated with `@Test`. This method compares two screen images using the `compareScreenImages` helper method. It asserts that the two screen images are different using `Assertions.assertTrue`. If the assertion fails, it will print an error message.\n",
-    "\n",
-    "The `setUp` method annotated with `@BeforeEach` is executed before each test, and the `tearDown` method annotated with `@AfterEach` is executed after each test. These methods are used to set up and clean up the test environment.\n",
-    "\n",
-    "The `captureScreenImage` method simulates capturing a screen image, and the `compareScreenImages` method compares two screen images by checking if they are equal.\n",
-    "\n",
-    "When running the test, the output will show the execution order of the methods and the expected output of the assertion.\n",
-    "\n",
-    "Expected output:\n",
-    "```\n",
-    "Setting up the test environment\n",
-    "Capturing screen image\n",
-    "Capturing screen image\n",
-    "Comparing screen images\n",
-    "Cleaning up the test environment\n",
-    "Screen images are different\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc3e486e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import org.junit.jupiter.api.Test;\n",
-    "import org.junit.jupiter.api.Assertions;\n",
-    "import org.junit.jupiter.api.DisplayName;\n",
-    "import org.junit.jupiter.api.BeforeEach;\n",
-    "import org.junit.jupiter.api.AfterEach;\n",
-    "\n",
-    "public class ScreenDiffTest {\n",
-    "\n",
-    "    // Set up the test environment before each test\n",
-    "    @BeforeEach\n",
-    "    public void setUp() {\n",
-    "        System.out.println(\"Setting up the test environment\");\n",
-    "    }\n",
-    "\n",
-    "    // Clean up the test environment after each test\n",
-    "    @AfterEach\n",
-    "    public void tearDown() {\n",
-    "        System.out.println(\"Cleaning up the test environment\");\n",
-    "    }\n",
-    "\n",
-    "    // Test case to compare two screen images\n",
-    "    @Test\n",
-    "    @DisplayName(\"Compare screen images\")\n",
-    "    public void testScreenDiff() {\n",
-    "        // Simulate capturing two screen images\n",
-    "        String screenImage1 = captureScreenImage();\n",
-    "        String screenImage2 = captureScreenImage();\n",
-    "\n",
-    "        // Compare the two screen images\n",
-    "        boolean isDifferent = compareScreenImages(screenImage1, screenImage2);\n",
-    "\n",
-    "        // Assert that the two screen images are different\n",
-    "        Assertions.assertTrue(isDifferent, \"Screen images are different\");\n",
-    "\n",
-    "        System.out.println(\"Screen images are different\"); // Expected output: Screen images are different\n",
-    "    }\n",
-    "\n",
-    "    // Helper method to simulate capturing a screen image\n",
-    "    private String captureScreenImage() {\n",
-    "        System.out.println(\"Capturing screen image\");\n",
-    "        return \"ScreenImage\";\n",
-    "    }\n",
-    "\n",
-    "    // Helper method to compare two screen images\n",
-    "    private boolean compareScreenImages(String image1, String image2) {\n",
-    "        System.out.println(\"Comparing screen images\");\n",
-    "        return !image1.equals(image2);\n",
-    "    }\n",
-    "}"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Java",
    "language": "java",
-   "name": "ijava"
+   "name": "java"
+  },
+  "language_info": {
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "20.0.1+9-29"
   }
  },
  "nbformat": 4,
