Minor changes to 3rd Party Libraries notebook.

--- a/java/3rd Party Libraries.ipynb
+++ b/java/3rd Party Libraries.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "460733be",
+   "metadata": {},
+   "source": [
+    "# Accuracy of this Notebook\n",
+    "\n",
+    "Because all the snippets in this notebook require importing 3rd party libraries, they are not runnable.  Therefore, there may be inaccuracies in the AI generated snippets.  Take this as a set of hints for further exploration instead of a reference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7ebb06e",
    "metadata": {},
    "source": [
@@ -77,7 +87,9 @@
     "7. Reading and writing files using `Files.write()` and `Files.asCharSource()`.\n",
     "8. Rate limiting using `RateLimiter.create()`.\n",
     "\n",
-    "Each feature is demonstrated with appropriate code and expected output."
+    "Each feature is demonstrated with appropriate code and expected output.\n",
+    "\n",
+    "Note: there are also immutable collections that use the _builder pattern_ in Guava."
    ]
   },
   {
@@ -885,7 +897,15 @@
   "kernelspec": {
    "display_name": "Java",
    "language": "java",
-   "name": "ijava"
+   "name": "java"
+  },
+  "language_info": {
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "20.0.1+9-29"
   }
  },
  "nbformat": 4,
