Adding async stuff to standard library notebook.

--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -471,9 +471,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0b3f21a",
+   "metadata": {},
+   "source": [
+    "# Threading\n",
+    "\n",
+    "`Thread` is in `java.lang`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "48ba4c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Odd: 1\n",
+      "Even: 2\n",
+      "Odd: 3\n",
+      "Even: 4\n",
+      "Odd: 5\n",
+      "Even: 6\n",
+      "Odd: 7\n",
+      "Even: 8\n",
+      "Odd: 9\n",
+      "Even: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class BasicThreadingDemo {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        // Maximum number up to which we want to print\n",
+    "        int maxNumber = 10;\n",
+    "\n",
+    "        // Thread to print even numbers\n",
+    "        Thread evenThread = new Thread(() -> {\n",
+    "            for (int i = 2; i <= maxNumber; i += 2) {\n",
+    "                System.out.println(\"Even: \" + i);\n",
+    "                try {\n",
+    "                    Thread.sleep(100); // adding a small delay for better visualization\n",
+    "                } catch (InterruptedException e) {\n",
+    "                    e.printStackTrace();\n",
+    "                }\n",
+    "            }\n",
+    "        });\n",
+    "\n",
+    "        // Thread to print odd numbers\n",
+    "        Thread oddThread = new Thread(() -> {\n",
+    "            for (int i = 1; i <= maxNumber; i += 2) {\n",
+    "                System.out.println(\"Odd: \" + i);\n",
+    "                try {\n",
+    "                    Thread.sleep(100); // adding a small delay for better visualization\n",
+    "                } catch (InterruptedException e) {\n",
+    "                    e.printStackTrace();\n",
+    "                }\n",
+    "            }\n",
+    "        });\n",
+    "\n",
+    "        // Start both threads\n",
+    "        evenThread.start();\n",
+    "        oddThread.start();\n",
+    "\n",
+    "        // Optional: Wait for both threads to finish before ending the program\n",
+    "        try {\n",
+    "            evenThread.join();\n",
+    "            oddThread.join();\n",
+    "        } catch (InterruptedException e) {\n",
+    "            e.printStackTrace();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "BasicThreadingDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "629aec3a",
+   "metadata": {},
+   "source": [
+    "# Promises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7f2e4cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The answer is: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.concurrent.CompletableFuture;\n",
+    "import java.util.concurrent.ExecutionException;\n",
+    "\n",
+    "public class CompletableFutureDemo {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        \n",
+    "        CompletableFuture<Integer> completableFuture = \n",
+    "            CompletableFuture.supplyAsync(() -> {\n",
+    "            // Simulating some computation\n",
+    "            try {\n",
+    "                Thread.sleep(1000);\n",
+    "            } catch (InterruptedException e) {\n",
+    "                throw new IllegalStateException(e);\n",
+    "            }\n",
+    "            return 42;\n",
+    "        });\n",
+    "\n",
+    "        // Then apply a transformation to the result\n",
+    "        CompletableFuture<String> transformedFuture = \n",
+    "            completableFuture.thenApply(result -> \"The answer is: \" + result);\n",
+    "\n",
+    "        // Print the result\n",
+    "        try {\n",
+    "            System.out.println(transformedFuture.get());\n",
+    "        } catch (InterruptedException | ExecutionException e) {\n",
+    "            e.printStackTrace();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "CompletableFutureDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "572fd512",
+   "id": "79e6a618",
    "metadata": {},
    "outputs": [],
    "source": []
